// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilesService generatePreviewPathsForNewMedia should generate media with correct preview paths 1`] = `
[
  {
    "newMedia": {
      "_id": "mockedHexString",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": null,
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/gif",
      "originalDate": 2010-10-10T08:10:10.000Z,
      "originalName": "test1.jpg",
      "preview": "/image-gif/preview/2010.10.10 - originalDate/test1-mockedHexString-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
    "oldMedia": Media {
      "_id": "mockedHexString",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": "/path/to/mockFile-fullSize.jpg",
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/jpg",
      "originalDate": 2019-09-19T10:00:00.000Z,
      "originalName": "original_mock_file.jpg",
      "preview": "/path/to/mockFile-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
  },
  {
    "newMedia": {
      "_id": "mockedHexString",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": "/image-gif/fullSize/2010.10.10 - originalDate/test2-mockedHexString-fullSize.jpg",
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/gif",
      "originalDate": 2010-10-10T08:10:10.000Z,
      "originalName": "test2.jpg",
      "preview": "/image-gif/preview/2010.10.10 - originalDate/test2-mockedHexString-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
    "oldMedia": Media {
      "_id": "mockedHexString",
      "changeDate": 1688319393000,
      "description": "test description",
      "exif": {
        "DateTimeOriginal": {
          "_ctor": "ExifDateTime",
          "day": 19,
          "hour": 12,
          "inferredZone": undefined,
          "millisecond": 0,
          "minute": 0,
          "month": 9,
          "rawValue": "2019:09:19 12:00:00",
          "second": 0,
          "tzoffsetMinutes": undefined,
          "year": 2019,
          "zoneName": undefined,
        },
        "Description": "test description",
        "GPSPosition": "42.5, 42.5",
        "ImageSize": "1920x1080",
        "Megapixels": 12,
        "Rating": 5,
      },
      "filePath": "/path/to/mockFile.jpg",
      "fullSizeJpg": "/path/to/mockFile-fullSize.jpg",
      "imageSize": "1920x1080",
      "keywords": [
        "test",
        "media",
      ],
      "megapixels": 12,
      "mimetype": "image/jpg",
      "originalDate": 2019-09-19T10:00:00.000Z,
      "originalName": "original_mock_file.jpg",
      "preview": "/path/to/mockFile-preview.jpg",
      "rating": 5,
      "size": 1024,
      "timeStamp": "00:00:00.100",
    },
  },
]
`;

exports[`FilesService makeMediaOutputFromMedia should return MediaOutput with custom fields 1`] = `
{
  "changeDate": 1688319393000,
  "description": "test description",
  "duplicates": [],
  "exif": {
    "DateTimeOriginal": {
      "_ctor": "ExifDateTime",
      "day": 19,
      "hour": 12,
      "inferredZone": undefined,
      "millisecond": 0,
      "minute": 0,
      "month": 9,
      "rawValue": "2019:09:19 12:00:00",
      "second": 0,
      "tzoffsetMinutes": undefined,
      "year": 2019,
      "zoneName": undefined,
    },
    "Description": "test description",
    "GPSPosition": "42.5, 42.5",
    "ImageSize": "1920x1080",
    "Megapixels": 12,
    "Rating": 5,
  },
  "filePath": "/path/to/mockTempFile.jpg",
  "id": "custom-id",
  "imageSize": "1920x1080",
  "keywords": [
    "test",
    "media",
  ],
  "megapixels": 12,
  "mimetype": "image/jpg",
  "originalDate": 2019-09-19T10:00:00.000Z,
  "originalName": "original_mock_temp_file.jpg",
  "rating": 5,
  "size": 1024,
  "staticPath": "http://localhost:3000/temp/path/to/mockTempFile-fullSize.jpg",
  "staticPreview": "http://localhost:3000/temp/path/to/mockTempFile-preview.jpg",
  "staticVideoFullSize": null,
  "timeStamp": "00:00:00.100",
}
`;

exports[`FilesService makeMediaOutputFromMedia should return MediaOutput with the correct properties 1`] = `
{
  "changeDate": 1688319393000,
  "description": "test description",
  "duplicates": [],
  "exif": {
    "DateTimeOriginal": {
      "_ctor": "ExifDateTime",
      "day": 19,
      "hour": 12,
      "inferredZone": undefined,
      "millisecond": 0,
      "minute": 0,
      "month": 9,
      "rawValue": "2019:09:19 12:00:00",
      "second": 0,
      "tzoffsetMinutes": undefined,
      "year": 2019,
      "zoneName": undefined,
    },
    "Description": "test description",
    "GPSPosition": "42.5, 42.5",
    "ImageSize": "1920x1080",
    "Megapixels": 12,
    "Rating": 5,
  },
  "filePath": "/path/to/mockTempFile.jpg",
  "id": "662eb6a4aece4209057aa5d0",
  "imageSize": "1920x1080",
  "keywords": [
    "test",
    "media",
  ],
  "megapixels": 12,
  "mimetype": "image/jpg",
  "originalDate": 2019-09-19T10:00:00.000Z,
  "originalName": "original_mock_temp_file.jpg",
  "rating": 5,
  "size": 1024,
  "staticPath": "http://localhost:3000/temp/path/to/mockTempFile-fullSize.jpg",
  "staticPreview": "http://localhost:3000/temp/path/to/mockTempFile-preview.jpg",
  "staticVideoFullSize": null,
  "timeStamp": "00:00:00.100",
}
`;

exports[`FilesService saveFiles should save files 1`] = `
[
  {
    "_id": "00000001f80f825d51300844",
    "changeDate": 1688319393000,
    "description": "test description",
    "exif": {
      "DateTimeOriginal": {
        "_ctor": "ExifDateTime",
        "day": 19,
        "hour": 12,
        "inferredZone": undefined,
        "millisecond": 0,
        "minute": 0,
        "month": 9,
        "rawValue": "2019:09:19 12:00:00",
        "second": 0,
        "tzoffsetMinutes": undefined,
        "year": 2019,
        "zoneName": undefined,
      },
      "Description": "test description",
      "GPSPosition": "42.5, 42.5",
      "ImageSize": "1920x1080",
      "Megapixels": 12,
      "Rating": 5,
    },
    "filePath": "/path/to/test1-updated.jpg",
    "fullSizeJpg": "/image-jpg/fullSize/2019.09.19 - originalDate/test1-updated-00000001f80f825d51300844-fullSize.jpg",
    "imageSize": "1920x1080",
    "keywords": [
      "keyword1",
      "keyword2",
    ],
    "megapixels": 12,
    "mimetype": "image/jpg",
    "originalDate": 2019-09-19T10:00:00.000Z,
    "originalName": "test1-updated.jpg",
    "preview": "/image-jpg/preview/2019.09.19 - originalDate/test1-updated-00000001f80f825d51300844-preview.jpg",
    "rating": 5,
    "size": 1024,
    "timeStamp": "00:00:00.100",
  },
  {
    "_id": "00000001f80f825d51300845",
    "changeDate": 1688319393000,
    "description": "test description",
    "exif": {
      "DateTimeOriginal": {
        "_ctor": "ExifDateTime",
        "day": 19,
        "hour": 12,
        "inferredZone": undefined,
        "millisecond": 0,
        "minute": 0,
        "month": 9,
        "rawValue": "2019:09:19 12:00:00",
        "second": 0,
        "tzoffsetMinutes": undefined,
        "year": 2019,
        "zoneName": undefined,
      },
      "Description": "test description",
      "GPSPosition": "42.5, 42.5",
      "ImageSize": "1920x1080",
      "Megapixels": 12,
      "Rating": 5,
    },
    "filePath": "/path/to/test2-updated.jpg",
    "fullSizeJpg": "/image-jpg/fullSize/2024.09.20 - originalDate/test2-updated-00000001f80f825d51300845-fullSize.jpg",
    "imageSize": "1920x1080",
    "keywords": [],
    "megapixels": 12,
    "mimetype": "image/jpg",
    "originalDate": 2024-09-20T17:00:00.000Z,
    "originalName": "test2-updated.jpg",
    "preview": "/image-jpg/preview/2024.09.20 - originalDate/test2-updated-00000001f80f825d51300845-preview.jpg",
    "rating": 5,
    "size": 1024,
    "timeStamp": "00:00:00.100",
  },
]
`;

exports[`FilesService updateFiles should update files 1`] = `
[
  Media {
    "_id": "00000001f80f825d51300844",
    "changeDate": 1688319393000,
    "description": "test description",
    "exif": {
      "DateTimeOriginal": {
        "_ctor": "ExifDateTime",
        "day": 19,
        "hour": 12,
        "inferredZone": undefined,
        "millisecond": 0,
        "minute": 0,
        "month": 9,
        "rawValue": "2019:09:19 12:00:00",
        "second": 0,
        "tzoffsetMinutes": undefined,
        "year": 2019,
        "zoneName": undefined,
      },
      "Description": "test description",
      "GPSPosition": "42.5, 42.5",
      "ImageSize": "1920x1080",
      "Megapixels": 12,
      "Rating": 5,
    },
    "filePath": "/path/to/test1-updated.jpg",
    "fullSizeJpg": "/path/to/test1-updated-fullSize.jpg",
    "imageSize": "1920x1080",
    "keywords": [
      "keyword1",
      "keyword2",
    ],
    "megapixels": 12,
    "mimetype": "image/jpg",
    "originalDate": 2019-09-19T10:00:00.000Z,
    "originalName": "test1-updated.jpg",
    "preview": "/path/to/test1-updated-preview.jpg",
    "rating": 5,
    "size": 1024,
    "timeStamp": "00:00:00.100",
  },
  Media {
    "_id": "00000001f80f825d51300845",
    "changeDate": 1688319393000,
    "description": "test description",
    "exif": {
      "DateTimeOriginal": {
        "_ctor": "ExifDateTime",
        "day": 19,
        "hour": 12,
        "inferredZone": undefined,
        "millisecond": 0,
        "minute": 0,
        "month": 9,
        "rawValue": "2019:09:19 12:00:00",
        "second": 0,
        "tzoffsetMinutes": undefined,
        "year": 2019,
        "zoneName": undefined,
      },
      "Description": "test description",
      "GPSPosition": "42.5, 42.5",
      "ImageSize": "1920x1080",
      "Megapixels": 12,
      "Rating": 5,
    },
    "filePath": "/path/to/test2-updated.jpg",
    "fullSizeJpg": "/path/to/test2-updated-fullSize.jpg",
    "imageSize": "1920x1080",
    "keywords": [],
    "megapixels": 12,
    "mimetype": "image/jpg",
    "originalDate": 2024-09-20T17:00:00.000Z,
    "originalName": "test2-updated.jpg",
    "preview": "/path/to/test2-updated-preview.jpg",
    "rating": 5,
    "size": 1024,
    "timeStamp": "00:00:00.100",
  },
]
`;

exports[`FilesService updateVideoPreviews should update video previews 1`] = `
Media {
  "_id": undefined,
  "fullSizeJpg": "/path/to-fullSize.jpg",
  "mimetype": "video/quicktime",
  "originalDate": 2010-10-10T08:10:10.000Z,
  "preview": "/path/to-preview.jpg",
  "timeStamp": "00:01:02.000",
}
`;

exports[`FilesService updateVideoPreviewsWithNewTimeStamp should update video previews with new timestamp 1`] = `
[
  {
    "newMedia": Media {
      "_id": undefined,
      "fullSizeJpg": "/path/to-fullSize.jpg",
      "mimetype": "video/quicktime",
      "originalDate": 2010-10-10T08:10:10.000Z,
      "originalName": "updatedFilePath.mov",
      "preview": "/path/to-preview.jpg",
      "timeStamp": "00:01:02.000",
    },
    "oldMedia": Media {
      "filePath": "/path/to/updatedFilePath.mov",
      "mimetype": "video/quicktime",
      "originalDate": 2010-10-10T08:10:10.000Z,
      "originalName": "updatedFilePath.mov",
      "timeStamp": "00:00:00.000",
    },
  },
]
`;
